# python-cli-template

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  coverage.xml  placata_basic.tml  pyproject.toml  ruff.toml  test_timeline.tml
docs/: ADVANCED_ANALYSIS.md  AI_MIGRATION_PROMPT.md  HOWTO.md  VISUALIZER.md
examples/: logging_example.py
scripts/: customize-template  new-python-cli
src/dmx_analyzer/: __init__.py  __main__.py  advanced_music_analyzer.py  logging.py  models.py  music_analyzer.py  spectacular_timeline_generator.py  timeline_generator.py
src/dmx_analyzer/visualizer/: __init__.py  sauna_renderer.py  timeline_player.py  visualizer_app.py
src/your_package/: __main__.py  logging.py
tests/: test_logging.py
